<?xml version="1.0"?>
<package>
  <name>fast_dtw</name>
  <version>0.1.0</version>
  <description>C++ implementation of FastDTW: Toward accurate dynamic time warping in linear time and space.
   This project provides a ros package for performing a dynamic time warping between two time series.The code has been adapted from https://github.com/melode11/FastDTW-x
  </description>
  <maintainer email="behnam.asadi@gmail.com">Behnam Asadi</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
</package>
